# Sudoku-Solver

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Options.h  README.md  System.cc  generated_puzzle.txt
.github/workflows/: deploy.yml  release.yml  test.yml
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  sudoku_solve  sudoku_tests  sudoku_tests[1]_include.cmake  sudoku_tests[1]_tests.cmake
examples/: inequality_sudoku.txt  killer_sudoku.txt  mixed_sudoku.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/wasm/: sudoku_wasm.js  sudoku_wasm.wasm
frontend/src/: App.vue
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/icons/: README.md  icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src/components/: ControlPanel.vue  GameTimer.vue  LoadingOverlay.vue  NumberPad.vue  SudokuBoard.vue  SudokuCanvas.vue  ThemeToggle.vue  VictoryModal.vue
frontend/src/composables/: useSudokuGame.ts  useTheme.ts
frontend/src/services/: sudokuWasm.ts
frontend/src/styles/: global.scss  variables.scss
frontend/src/types/: sudoku.ts
frontend/src/wasm/: sudokuWasm.ts
frontend/src/workers/: sudoku.worker.ts
src/: SudokuEncoder.cpp  SudokuEncoder.h  SudokuGenerator.cpp  SudokuGenerator.h  SudokuParser.cpp  SudokuParser.h  SudokuSolver.cpp  SudokuSolver.h  SudokuTypes.h  main.cpp  wasm_bindings.cpp
tests/: test_generator.cpp  test_inequality_sudoku.cpp  test_killer_sudoku.cpp  test_main.cpp  test_mixed_sudoku.cpp  test_standard_sudoku.cpp  test_uniqueness.cpp
web/: index.html  style.css  sudoku.js
