[package]
name = "sudoku-solver"
version = "1.0.0"
description = "A high-performance Sudoku solver and generator"
authors = ["you"]
edition = "2021"

[lib]
name = "sudoku_solver_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
